# ephel

./: .gitignore  LICENSE  README.md  ROADMAP.md
stage/v0/2-compiler/: .ocamlformat  compiler.opam  dune-project
stage/v0/2-compiler/lib/: dune
stage/v0/2-compiler/lib/ir/: dune
stage/v0/2-compiler/lib/lang/: dune  render.ml
stage/v0/2-compiler/lib/transpiler/: dune  transpiler.ml  transpiler.mli
stage/v0/2-compiler/lib/utils/: dune
stage/v0/2-compiler/test/: dune  t01_basic.ml  t02_sum.ml  t03_pair.ml  t04_lambda.ml
stage/v0/compiler/: dune-project
stage/v0/compiler/lib/mitch/: dune  mitch.mli
stage/v0/compiler/test/mitch/: dune  t00_tests.ml  t01_basic.ml  t02_sum.ml  t03_pair.ml  t04_lambda.ml
stage/v0/lib/2-compiler/: dune  ephel_compiler.mli
stage/v0/lib/2-compiler/02-token/: dune  ephel_compiler_token.mli  render.mli  token.mli
stage/v0/lib/2-compiler/02-tokenizer/: dune  ephel_compiler_tokenizer.mli  render.ml  token.mli  tokenizer.ml  tokenizer.mli
stage/v0/lib/2-compiler/03-analyzer/: analyser.ml  analyser.mli  dune  render.ml
stage/v0/lib/2-compiler/03-cst/: cst.ml  dune  ephel_compiler_cst.mli  render.ml
stage/v0/lib/2-compiler/03-tokenizer/: dune  ephel_compiler_tokenizer.mli  tokenizer.ml  tokenizer.mli
stage/v0/lib/2-compiler/04-analyzer/: analyser.ml  analyser.mli  dune
stage/v0/lib/2-compiler/04-ast/: render.ml
stage/v0/lib/2-compiler/04-cst/: cst.ml  cst.mli  ephel_compiler_cst.mli  render.ml  render.mli
stage/v0/lib/2-compiler/05-analyzer/: SYNTAX.md  analyser.ml  analyser.mli  dune  ephel_compiler_analyzer.mli
(+349 files in other folders)
