(library
 (name ephel_compiler)
 (public_name ephel.compiler)
 (libraries
  ephel.compiler.tokenizer
  ephel.compiler.analyzer
  ephel.compiler.ast
  ephel.compiler.ir
  ephel.compiler.transpiler
  ephel.compiler.expander
  ephel.compiler.optimiser
  ephel.compiler.simplifier
  ephel.compiler.normaliser)
 (modules_without_implementation ephel_compiler))
